# typechecker-zoo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  dprint.json  justfile
.cargo/: config.toml
.github/.github/workflows/: deploy-docs.yml
.github/workflows/: ci.yml  deploy-docs.yml
algorithm-w/: Cargo.toml
algorithm-w/src/: ast.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop
algorithm-w/tests/: basic.fun  basic.out  integration_tests.rs
algorithm-w/tests/snapshots/: integration_tests__golden_files.snap
cbpv/: Cargo.toml
cbpv/src/: ast.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop
cbpv/tests/: integration_tests.rs  test_lines.txt
cbpv/tests/snapshots/: integration_tests__golden_files.snap
coc/: Cargo.toml  run_tests.sh
coc/examples/: basic.coc  coc_power_showcase.coc  coc_showcase.coc  debug_apply.coc  debug_constructor.coc  debug_implicit.coc  debug_map.coc  debug_name_conflict.coc  debug_nat.coc  debug_pattern_only.coc  debug_simple.coc  debug_universe.coc  dependent.coc  dependent_vec.coc  higher_order.coc  higher_order_simple.coc  identity.coc  implicit_args_test.coc  implicit_basic.coc  implicit_comprehensive.coc  implicit_final_demo.coc  let_practical.coc  nat_and_mult.coc  pattern_matching_advanced.coc  pattern_matching_test.coc  poly_id.coc  polymorphic_functions.coc  polymorphic_id.coc  simple.coc  simple_implicit.coc  simple_let.coc  simple_polymorphic.coc  simple_structure.coc  structure_with_usage.coc  target_square.coc  test_apply_id.coc  test_compose.coc  test_const.coc  test_debug.coc  test_double_map.coc  (+26 more)
coc/src/: alpha.rs  ast.rs  context.rs  diagnostics.rs  errors.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.lalrpop  solver.rs  term_utils.rs  typecheck.rs  unification.rs  universe_solver.rs
coc/tests/: basic.coc  basic.out  eta_conversion_tests.rs  final_demo.coc  final_demo.out  integration_test.rs  integration_tests.rs  nat.coc  nat.out  pattern_matching_tests.rs  sigma_tests.rs  target_compose.coc  target_compose.out  universe_polymorphism_tests.rs  working_square.coc  working_square.out
coc/tests/snapshots/: integration_tests__basic_terms.snap  integration_tests__golden_files@basic.coc.snap  integration_tests__golden_files@final_demo.coc.snap  integration_tests__golden_files@nat.coc.snap  integration_tests__golden_files@target_compose.coc.snap  integration_tests__golden_files@working_square.coc.snap
docs/: CLAUDE.md  README.md  book.toml
docs/src/: SUMMARY.md  custom.css  favicon.js  introduction.md
docs/src/algorithm-w/: examples.md  implementation.md  lambda-calculus.md
refinement/: Cargo.toml  build.rs
refinement/src/: ast.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop  smt.rs
refinement/tests/: 01_literals.fun  02_lambdas.fun  03_path_conditions.fun  04_errors.fun  05_smt.fun  integration_tests.rs  test_lines.txt
row-effects/: Cargo.toml
row-effects/src/: ast.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop
row-effects/tests/: 01_basics.fun  02_perform.fun  03_handle.fun  04_polymorphism.fun  05_scoped_labels.fun  06_errors.fun  integration_tests.rs
row-poly/: Cargo.toml  README.md
row-poly/src/: ast.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop
row-poly/tests/: 01_basics.fun  01_basics.out  02_scoped_labels.fun  02_scoped_labels.out  03_selection.fun  03_selection.out  04_extension.fun  04_extension.out  05_restriction.fun  05_restriction.out  06_update.fun  06_update.out  07_polymorphism.fun  07_polymorphism.out  08_higher_order.fun  08_higher_order.out  09_termination.fun  09_termination.out  10_errors.fun  10_errors.out  basic.fun  basic.out  integration_tests.rs
system-f/: Cargo.toml
system-f-omega/: Cargo.toml  README.md  build.rs
system-f-omega/examples/: closure_test.fun  comprehensive_records.hs  comprehensive_test.hs  constructor_test.hs  data_test.hs  fibonacci.fun  fibonacci.hs  final_demo.hs  intrinsic_test.fun  lambda_test.hs  list_monad.hs  multi_print.fun  nested_closure.fun  print_test.fun  records_via_adts.hs  simple_closure.fun  simple_lambda.hs  simple_record.hs  simple_test.hs  working.hs  working_features.hs  working_records.hs
system-f-omega/src/: builtins.rs  compile.rs  core.rs  coverage.rs  errors.rs  lexer.rs  lib.rs  main.rs  parse.rs  parser.lalrpop  surface.rs  typecheck.rs  worklist.rs
system-f-omega/src/codegen/: closure.rs  codegen.rs  compile.rs  cranelift_gen.rs  driver.rs  erase.rs  executable.rs  mod.rs  module_compiler.rs  runtime.c  runtime.rs  runtime_support.c  runtime_support.rs  value.rs  wrapper.c
system-f-omega/tests/: codegen_test.rs  coverage_test.rs  examples_test.rs
system-f-omega/tests/coverage/: 01_exhaustive.hs  02_non_exhaustive.hs  03_nested_non_exhaustive.hs  04_redundant_arm.hs  05_nested_exhaustive.hs
system-f-omega/tests/snapshots/: codegen_test__erase_type_abstraction.snap  coverage_test__coverage_fixtures@01_exhaustive.hs.snap  coverage_test__coverage_fixtures@02_non_exhaustive.hs.snap  coverage_test__coverage_fixtures@03_nested_non_exhaustive.hs.snap  coverage_test__coverage_fixtures@04_redundant_arm.hs.snap  coverage_test__coverage_fixtures@05_nested_exhaustive.hs.snap
system-f/src/: ast.rs  errors.rs  lib.rs  main.rs  parser.lalrpop  testing.rs  typecheck.rs
system-f/tests/: basic.fun  basic.out  edge_cases.fun  edge_cases.out  impredicative_cases.fun  impredicative_cases.out  integration_tests.rs  subtyping_edge_cases.fun  subtyping_edge_cases.out
system-f/tests/snapshots/: integration_tests__golden_files@basic.fun.snap  integration_tests__golden_files@edge_cases.fun.snap  integration_tests__golden_files@impredicative_cases.fun.snap  integration_tests__golden_files@subtyping_edge_cases.fun.snap
type-classes/: Cargo.toml
type-classes/src/: ast.rs  classes.rs  errors.rs  infer.rs  lib.rs  main.rs  parser.lalrpop  subst.rs
type-classes/tests/: 01_basics.fun  02_classes.fun  03_instances.fun  04_resolution.fun  05_superclass.fun  06_defaults.fun  07_generalize.fun  08_multi_class.fun  09_errors.fun  integration_tests.rs
(+95 files in other folders)
