[package]
name = "algorithm-w"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
rustyline = "18.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"

[build-dependencies]
lalrpop = { version = "0.23.1", features = ["lexer", "unicode"] }

[lints]
workspace = true
