[package]
name = "algorithm-w"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
rustyline = "18.0"
thiserror = "2.0"

[build-dependencies]
lalrpop = { version = "0.23.1", features = ["lexer", "unicode"] }

[lints]
workspace = true
