[package]
name = "system-f-omega"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["codegen"]
codegen = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-object", "dep:target-lexicon"]

[dependencies]
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
logos = "0.15"
thiserror = "2.0"
ariadne = "0.5"
clap = { version = "4.0", features = ["derive"] }

# Cranelift backend dependencies
cranelift = { version = "0.124", optional = true }
cranelift-module = { version = "0.123", optional = true }
cranelift-object = { version = "0.123", optional = true }
target-lexicon = { version = "0.13", optional = true }

[build-dependencies]
lalrpop = { version = "0.22.2", features = ["lexer", "unicode"] }
