[package]
name = "system-f-omega"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["codegen"]
codegen = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-object", "dep:target-lexicon"]

[dependencies]
ariadne = "0.6"
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
logos = "0.16"
thiserror = "2.0"

# Cranelift backend dependencies
cranelift = { version = "0.132", optional = true }
cranelift-module = { version = "0.131", optional = true }
cranelift-object = { version = "0.131", optional = true }
target-lexicon = { version = "0.13", optional = true }

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }

[build-dependencies]
lalrpop = { version = "0.23.1", features = ["lexer", "unicode"] }
