[package]
name = "system-f"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ariadne = "0.6"
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
thiserror = "2.0"

[build-dependencies]
lalrpop = { version = "0.23.1", features = ["lexer", "unicode"] }
